--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
     <script type="text/javascript" src="assets/js/todos.js"></script>
   </head>
   <body>
-    
-    <h1>To-Do List</h1>
-    <input type="text"><br>
-    <ul>
-      <li>Go to Potions Class</li>
-      <li>Buy New Robes</li>
-      <li>Visit Hagrid</li>
-    </ul>
 
+    <div id="container">
+      <h1>To-Do List</h1>
+      <input type="text"><br>
+
+      <ul>
+        <li><span>X</span> Go to Potions Class</li>
+        <li><span>X</span> Buy New Robes</li>
+        <li><span>X</span> Visit Hagrid</li>
+      </ul>    
+    </div>
+    
   </body>
 </html>
