--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta charset="utf-8">
     <title>Section 18: Todo List Project</title>
     <link rel="stylesheet" type="text/css" href="assets/css/todos.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <script src="assets/js/lib/jquery-3.1.1.min.js"></script>
 
   </head>
   <body>
 
     <div id="container">
-      <h1>To-Do List</h1>
-      <input type="text"><br>
+      <h1>To-Do List <i class="fa fa-plus"></i></h1>
+      <input type="text" placeholder="Add New Todo"><br>
 
       <ul>
-        <li><span>X</span> Go to Potions Class</li>
-        <li><span>X</span> Buy New Robes</li>
-        <li><span>X</span> Visit Hagrid</li>
+        <li><span><i class="fa fa-trash"></i></span> Go to Potions Class</li>
+        <li><span><i class="fa fa-trash"></i></span> Buy New Robes</li>
+        <li><span><i class="fa fa-trash"></i></span> Visit Hagrid</li>
       </ul>    
     </div>
 
